@@ -1,3 +1,4 @@
+* Add production picking and output locations
 * Add cron task to reschedule past productions
 * Allow lost_found as output of production
 * Keep cost of unused input products
